Added Graph Search for Pair Closures
PCSearch takes care of finding a path from pX to pY by using a
double sided BFS to create a subgraph to run the regular SGSearch
algorithm on. Still TODO:
 - Make the resulting SGWalk's point to vertexes/edges in the original graph
    (as opposed to the subgraph. This way we can safely delete the subgraph after the
    paths are found).

--- a/src/GraphSearch/Makefile.am
+++ b/src/GraphSearch/Makefile.am
@@ -14,5 +14,6 @@ libgraphsearch_a_CPPFLAGS = \
 
 libgraphsearch_a_SOURCES = \
    EdgeGenerator.h EdgeGenerator.cpp \
-   Subgraph.h Subgraph.cpp
+   Subgraph.h Subgraph.cpp \
+   PCSearch.h PCSearch.cpp
 
