--- a/src/GraphSearch/Makefile.am
+++ b/src/GraphSearch/Makefile.am
@@ -15,5 +15,6 @@ libgraphsearch_a_CPPFLAGS = \
 libgraphsearch_a_SOURCES = \
    EdgeGenerator.h EdgeGenerator.cpp \
    Subgraph.h Subgraph.cpp \
-   PCSearch.h PCSearch.cpp
+   PCSearch.h PCSearch.cpp \
+   bundle.h bundle.cpp
 
