--- a/src/.gitignore
+++ b/src/.gitignore
@@ -9,6 +9,9 @@ depcomp
 install-sh
 missing
 build*
+config*
+errors.txt
+Makefile
 
 
 # ignore compiled units
@@ -16,3 +19,6 @@ build*
 *.a
 *.deps
 *.Po
+
+# ignore TEST
+TEST/
