Added overlap finder to close-path
The overlapfinder has been placed in the post-processor.
We should probably move it to the processor, and store these overlaps
in the post processor to be added to the graph.

--- a/src/GraphSearch/Makefile.am
+++ b/src/GraphSearch/Makefile.am
@@ -19,5 +19,6 @@ libgraphsearch_a_SOURCES = \
    bundle.h bundle.cpp \
    bundleReader.h bundleReader.cpp \
    edgeTracker.h edgeTracker.cpp \
-   closePathProcess.h closePathProcess.cpp
+   closePathProcess.h closePathProcess.cpp \
+   overlapFinder.h overlapFinder.cpp
 #   bundleManager.h bundleManager.cpp
