Added TEST for parallel processing
Exploring how speedup looks like for a dummy processing task
using maps.

--- a/src/TEST/Makefile.am
+++ b/src/TEST/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = testDummyThread
+bin_PROGRAMS = testDummyThread getSize mapParallel
 
 testDummyThread_CPPFLAGS = \
     -I$(top_srcdir)/Util \
@@ -30,3 +30,63 @@ testDummyThread_LDFLAGS = -pthread
 
 testDummyThread_SOURCES = ThreadDummyTest.cpp \
                           ThreadDummy.h
+
+
+getSize_CPPFLAGS = \
+    -I$(top_srcdir)/Util \
+    -I$(top_srcdir)/Bigraph \
+    -I$(top_srcdir)/SuffixTools \
+    -I$(top_srcdir)/StringGraph \
+    -I$(top_srcdir)/Concurrency \
+    -I$(top_srcdir)/Algorithm \
+    -I$(top_srcdir)/SQG \
+    -I$(top_srcdir)/Scaffold \
+    -I$(top_srcdir)/GraphDiff \
+    -I$(top_srcdir)/GraphSearch \
+    -I$(top_srcdir)/Thirdparty
+
+getSize_LDADD = \
+    $(top_builddir)/Scaffold/libscaffold.a \
+    $(top_builddir)/GraphDiff/libgraphdiff.a \
+    $(top_builddir)/StringGraph/libstringgraph.a \
+    $(top_builddir)/Concurrency/libconcurrency.a \
+    $(top_builddir)/Algorithm/libalgorithm.a \
+    $(top_builddir)/SuffixTools/libsuffixtools.a \
+    $(top_builddir)/Bigraph/libbigraph.a \
+    $(top_builddir)/Util/libutil.a \
+    $(top_builddir)/SQG/libsqg.a \
+    $(top_builddir)/GraphSearch/libgraphsearch.a \
+    $(top_builddir)/Thirdparty/libthirdparty.a 
+
+
+getSize_SOURCES = getSizes.cpp
+
+mapParallel_CPPFLAGS = \
+    -I$(top_srcdir)/Util \
+    -I$(top_srcdir)/Bigraph \
+    -I$(top_srcdir)/SuffixTools \
+    -I$(top_srcdir)/StringGraph \
+    -I$(top_srcdir)/Concurrency \
+    -I$(top_srcdir)/Algorithm \
+    -I$(top_srcdir)/SQG \
+    -I$(top_srcdir)/Scaffold \
+    -I$(top_srcdir)/GraphDiff \
+    -I$(top_srcdir)/GraphSearch \
+    -I$(top_srcdir)/Thirdparty
+
+mapParallel_LDADD = \
+    $(top_builddir)/Scaffold/libscaffold.a \
+    $(top_builddir)/GraphDiff/libgraphdiff.a \
+    $(top_builddir)/StringGraph/libstringgraph.a \
+    $(top_builddir)/Concurrency/libconcurrency.a \
+    $(top_builddir)/Algorithm/libalgorithm.a \
+    $(top_builddir)/SuffixTools/libsuffixtools.a \
+    $(top_builddir)/Bigraph/libbigraph.a \
+    $(top_builddir)/Util/libutil.a \
+    $(top_builddir)/SQG/libsqg.a \
+    $(top_builddir)/GraphSearch/libgraphsearch.a \
+    $(top_builddir)/Thirdparty/libthirdparty.a 
+
+mapParallel_LDFLAGS = -pthread
+
+mapParallel_SOURCES = testMapParallel.cpp
