Added generic allocator to GraphSearchTree
The allocator is passed in through SGSearchParams.

--- a/src/TEST/Makefile.am
+++ b/src/TEST/Makefile.am
@@ -89,4 +89,6 @@ mapParallel_LDADD = \
 
 mapParallel_LDFLAGS = -pthread
 
+mapParallel_CXXFLAGS = -pg -O0
+
 mapParallel_SOURCES = testMapParallel.cpp
