Removed TEST from Makefile

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,3 @@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = bin Thirdparty Util SQG Bigraph Algorithm StringGraph Concurrency SuffixTools Scaffold GraphDiff GraphSearch SGA TEST
+SUBDIRS = bin Thirdparty Util SQG Bigraph Algorithm StringGraph Concurrency SuffixTools Scaffold GraphDiff GraphSearch SGA 
+#SUBDIRS = bin Thirdparty Util SQG Bigraph Algorithm StringGraph Concurrency SuffixTools Scaffold GraphDiff GraphSearch SGA TEST
