--- a/src/configure.ac
+++ b/src/configure.ac
@@ -88,10 +88,10 @@ fi
 # Set compiler flags.
 #AC_SUBST(AM_CXXFLAGS, "-Wall -Wextra -Werror")
 AC_SUBST(AM_CXXFLAGS, "-Wall -Wextra")
-#AC_SUBST(CXXFLAGS, "-O3")
-#AC_SUBST(CFLAGS, "-O3")
-AC_SUBST(CXXFLAGS, "-O0 -g")
-AC_SUBST(CFLAGS, "-O0 -g")
+AC_SUBST(CXXFLAGS, "-O3")
+AC_SUBST(CFLAGS, "-O3")
+#AC_SUBST(CXXFLAGS, "-O0 -g")
+#AC_SUBST(CFLAGS, "-O0 -g")
 #AC_SUBST(CXXFLAGS, "-O0 -pg")
 #AC_SUBST(CFLAGS, "-O3 -pg")
 AC_SUBST(CPPFLAGS, "$CPPFLAGS $openmp_cppflags $sparsehash_include $bamtools_include")
