--- a/src/TEST/Makefile.am
+++ b/src/TEST/Makefile.am
@@ -1,5 +1,6 @@
-bin_PROGRAMS = testDummyThread getSize mapParallel testReturnVec
+bin_PROGRAMS = testDummyThread getSize mapParallel testHashMap
 
+#######################################################
 testDummyThread_CPPFLAGS = \
     -I$(top_srcdir)/Util \
     -I$(top_srcdir)/Bigraph \
@@ -32,6 +33,7 @@ testDummyThread_SOURCES = ThreadDummyTest.cpp \
                           ThreadDummy.h
 
 
+#######################################################
 getSize_CPPFLAGS = \
     -I$(top_srcdir)/Util \
     -I$(top_srcdir)/Bigraph \
@@ -61,6 +63,7 @@ getSize_LDADD = \
 
 getSize_SOURCES = getSizes.cpp
 
+#######################################################
 mapParallel_CPPFLAGS = \
     -I$(top_srcdir)/Util \
     -I$(top_srcdir)/Bigraph \
@@ -92,6 +95,7 @@ mapParallel_LDFLAGS = -pthread
 
 mapParallel_SOURCES = testMapParallel.cpp
 
+#######################################################
 testReturnVec_CPPFLAGS = \
     -I$(top_srcdir)/Util \
     -I$(top_srcdir)/Bigraph \
@@ -121,3 +125,34 @@ testReturnVec_LDADD = \
 testReturnVec_LDFLAGS = -pthread
 
 testReturnVec_SOURCES = testReturnVec.cpp
+
+#######################################################
+testHashMap_CPPFLAGS = \
+    -I$(top_srcdir)/Util \
+    -I$(top_srcdir)/Bigraph \
+    -I$(top_srcdir)/SuffixTools \
+    -I$(top_srcdir)/StringGraph \
+    -I$(top_srcdir)/Concurrency \
+    -I$(top_srcdir)/Algorithm \
+    -I$(top_srcdir)/SQG \
+    -I$(top_srcdir)/Scaffold \
+    -I$(top_srcdir)/GraphDiff \
+    -I$(top_srcdir)/GraphSearch \
+    -I$(top_srcdir)/Thirdparty
+
+testHashMap_LDADD = \
+    $(top_builddir)/Scaffold/libscaffold.a \
+    $(top_builddir)/GraphDiff/libgraphdiff.a \
+    $(top_builddir)/StringGraph/libstringgraph.a \
+    $(top_builddir)/Concurrency/libconcurrency.a \
+    $(top_builddir)/Algorithm/libalgorithm.a \
+    $(top_builddir)/SuffixTools/libsuffixtools.a \
+    $(top_builddir)/Bigraph/libbigraph.a \
+    $(top_builddir)/Util/libutil.a \
+    $(top_builddir)/SQG/libsqg.a \
+    $(top_builddir)/GraphSearch/libgraphsearch.a \
+    $(top_builddir)/Thirdparty/libthirdparty.a 
+
+testHashMap_LDFLAGS = -pthread
+
+testHashMap_SOURCES = testHashMap.cpp
